# Omniframe-Firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/epdiy/: CMakeLists.txt
components/epdiy/src/: epd_display.h  epdiy.c  epdiy.h  highlevel.c  render.c  render.h
components/epdiy/src/board/: epd_board.c
components/epdiy/src/output_common/: line_queue.c  line_queue.h  lut.c  lut.h  render_context.c  render_context.h
components/epdiy/src/output_lcd/: lcd_driver.c  render_lcd.c  render_lcd.h
main/: CMakeLists.txt  config.c  config.h  main.c
main/display/: image_data.c  image_data.h  image_queue.c  image_queue.h  text.c  text.h
main/drivers/: button.c  button.h  measure.c  measure.h  sd_card.c  sd_card.h  tps.c  tps.h
main/network/: api.c  api.h  download.c  download.h  ota.c  ota.h  wifi.c  wifi.h
scripts/fonts/: font_processor.py
scripts/fonts/font_c_arrays/: font_bitmaps.h
